# pyrozza

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: cicd.yml
pyrozza/: client.py  exceptions.py
pyrozza/tests/: conftest.py  test_client.py
